Update project configuration and IDE settings

--- a/project.private.config.json
+++ b/project.private.config.json
@@ -19,6 +19,6 @@
     "ignoreDevUnusedFiles": true,
     "bigPackageSizeSupport": false
   },
-  "libVersion": "3.8.12",
+  "libVersion": "trial",
   "condition": {}
 }
