--- a/security-chat-backend/requirements.txt
+++ b/security-chat-backend/requirements.txt
@@ -2,3 +2,6 @@ fastapi>=0.68.0,<0.69.0
 pydantic>=1.8.0,<2.0.0
 uvicorn>=0.15.0,<0.16.0
 requests>=2.26.0,<3.0.0
+mysql-connector-python>=8.0.0,<9.0.0
+pymysql>=1.0.0,<2.0.0
+sqlalchemy>=1.4.0,<2.0.0
